# optiperslp

./: .clangd  .gitignore  Makefile.am  README  README.md  configure.ac
OptiCycles_Tools/: Makefile.am  oc_README.sh  oc_apply_mask.py  oc_clean_coefficients.py  oc_convert_to_v_format.py  oc_get_pairs.py  oc_inpolygon.py  oc_make_histogram.py  oc_secondary_struct.py  oc_v_apply_i2p.py
OptiCycles_Tools/tests/: Makefile.am  tester.py
catch/: Makefile.am
m4/: ax_cxx_compile_stdcxx_11.m4
programs/: Makefile.am  optiperslp.cpp  sample.txt
src/: Makefile.am  MapChain.cpp  MapChain.h  common_definitions.h  do_optipers.cpp  do_optipers.h  optimization_timing.hpp  optipers_problem.cpp  optipers_problem.h  optipers_problem_standard_optimizer.cpp  optiperslp.h  persistence.cpp  persistence.h  weighted_alpha_3_over_r.cpp  weighted_alpha_3_over_r.h  weighted_alpha_shape_3_definitions.h
src/tests/: Makefile.am  test_definitions.cpp  test_full.cpp  test_mapchain.cpp  test_optipersprob.cpp  test_weighted_alpha.cpp
